Moved back to top link to the right bottom corner and made it always visible while not at the top of the page (Fixed position)

--- a/files/css/structure.css
+++ b/files/css/structure.css
@@ -70,6 +70,18 @@ body
 	overflow: hidden;
 }
 
+#backtotop
+{
+	position: fixed;
+	right: 0px;
+	bottom: 0px;
+	padding: 10px;
+	color: #fff;
+	background-color: rgba(0, 0, 0, 0.6);
+	border-top-left-radius: 10px;
+	cursor: pointer;
+}
+
 #body
 {
 	padding-bottom: 110px;
